[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Animatedbackground.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Music/DRIVE.mp3" type="AudioStream" id=3]
[ext_resource path="res://images/background.jpg" type="Texture" id=4]
[ext_resource path="res://Scripts/World.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Moving_ast.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Explosion.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/back_2.jpg" type="Texture" id=8]
[ext_resource path="res://images/thruster_0.png" type="Texture" id=9]
[ext_resource path="res://images/thruster_2.png" type="Texture" id=10]
[ext_resource path="res://images/thruster_1.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Time.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=15]
[ext_resource path="res://Music/Shoot_noise.mp3" type="AudioStream" id=16]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1674, -1218, 0, 0, 0, 0, 1262, -1234, 0, 0, 0, 0, 1262, 1334, 0, 0, 0, 0, -1692, 1318, 0, 0, 0, 0, -1708, -1226 )
}

[sub_resource type="CircleShape2D" id=3]
radius = 32.0156

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "Thruster",
"speed": 5.0
} ]

[node name="World" type="Node2D"]
position = Vector2( 577, 286 )
script = ExtResource( 5 )
astra = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1815.0
margin_top = -1312.0
margin_right = 1348.0
margin_bottom = 1518.0
rect_rotation = 0.107608
texture = ExtResource( 8 )
expand = true

[node name="AstraPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AstraSpawnLocation" type="PathFollow2D" parent="AstraPath"]
position = Vector2( -1674, -1218 )
rotation = -0.00540162

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -40.0
autoplay = true

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( -62, 57 )
script = ExtResource( 14 )

[node name="Area2D" type="Area2D" parent="Player2" groups=["player"]]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2/Area2D"]
position = Vector2( -3.00003, -2 )
shape = SubResource( 3 )

[node name="Explosion" parent="Player2" instance=ExtResource( 7 )]
position = Vector2( 6, -1 )
rotation = -1.5708
animation = "Default"
frame = 0
speed_scale = 0.9
playing = false
script = null

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player2"]
remote_path = NodePath("../../Camera2D")

[node name="ThrusterR2" type="AnimatedSprite" parent="Player2"]
position = Vector2( -40.7203, 18.0217 )
rotation = 1.57079
scale = Vector2( 0.131194, 0.135678 )
frames = SubResource( 4 )
animation = "Default"
speed_scale = 1.5
playing = true

[node name="ThrusterL2" type="AnimatedSprite" parent="Player2"]
position = Vector2( -40.9143, -18.9792 )
rotation = 1.57079
scale = Vector2( 0.148953, 0.135948 )
frames = SubResource( 4 )
animation = "Default"
speed_scale = 1.8
playing = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player2"]

[node name="UI" type="Control" parent="Player2/CanvasLayer"]
margin_left = 207.0
margin_top = 183.0
margin_right = 819.0
margin_bottom = 528.0

[node name="Score" type="Label" parent="Player2/CanvasLayer/UI"]
margin_left = -175.0
margin_top = -155.0
margin_right = -63.0
margin_bottom = -89.0
text = "Score: 0"
script = ExtResource( 12 )

[node name="Lifespan" type="Timer" parent="Player2/CanvasLayer/UI"]
autostart = true

[node name="Time" type="Label" parent="Player2/CanvasLayer/UI"]
margin_left = 736.0
margin_top = -156.0
margin_right = 784.0
margin_bottom = -142.0
text = "Time: 0"
script = ExtResource( 13 )

[node name="Level" type="Label" parent="Player2/CanvasLayer/UI"]
margin_left = 304.0
margin_top = -159.0
margin_right = 361.0
margin_bottom = -143.0
text = "Level: 0"
script = ExtResource( 15 )

[node name="Bullet_noise" type="AudioStreamPlayer" parent="Player2"]
stream = ExtResource( 16 )

[node name="Animatedbackground" type="ParallaxBackground" parent="."]
visible = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Animatedbackground"]
position = Vector2( 513.5, 367 )
scale = Vector2( 1.59219, 2.01667 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -62, 57 )
rotation = 1.5708
current = true
zoom = Vector2( 0.7, 0.7 )
limit_left = -1200
limit_top = -1000
limit_right = 1900
limit_bottom = 1800
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 8.0
editor_draw_limits = true
editor_draw_drag_margin = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Player2/Area2D" to="Player2" method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="Player2/Explosion" to="Player2" method="_on_Explosion_animation_finished"]
[connection signal="animation_finished" from="Player2/ThrusterR2" to="Player2" method="_on_ThrusterR2_animation_finished"]
[connection signal="animation_finished" from="Player2/ThrusterL2" to="Player2" method="_on_ThrusterL2_animation_finished"]
[connection signal="timeout" from="Player2/CanvasLayer/UI/Lifespan" to="Player2/CanvasLayer/UI/Time" method="_on_Lifespan_timeout"]
